fixed background bug on smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   background-repeat: no-repeat;
   height: 120vh;
   background-position: center;
-  background-size: auto 130%;
+  background-size: auto 300%;
   margin: 0;
 }
 
